--- a/index.html
+++ b/index.html
@@ -6,19 +6,22 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Wall Clock</title>
     <link rel="stylesheet" href="styles.css" />
+    <script src="./app.js" defer></script>
   </head>
   <body>
-    <div class="clock">
-      <div class="hour">
-        <div class="hrs"></div>
-      </div>
-      <div class="minute">
-        <div class="mins"></div>
-      </div>
-      <div class="second">
-        <div class="secs"></div>
+    <div class="clock-container">
+      <h2>Analog clock</h2>
+      <div class="clock">
+        <div class="hour">
+          <div class="hr" id="hr"></div>
+        </div>
+        <div class="min">
+          <div class="mn" id="mn"></div>
+        </div>
+        <div class="sec">
+          <div class="sc" id="sc"></div>
+        </div>
       </div>
     </div>
-    <script src="app.js"></script>
   </body>
 </html>
